--- a/pages/page.module.css
+++ b/pages/page.module.css
@@ -126,6 +126,7 @@
 
 .workoutName {
     text-align: center; /*addedbysean*/
+    word-break: break-word;
 }
 .workoutWrapper {
     display: flex;
@@ -140,7 +141,8 @@
     width: 100%;
 }
 .startWorkoutSpan {
-    font-size: 100px;
+    font-size: 36px;
+    padding: 10px 20px;
 }
 .startWorkoutSpan:hover {
     cursor: pointer;
@@ -157,22 +159,21 @@
     margin: 20px 0;
     padding: 20px;
     align-items: center;
-
 }
 
 .profileContainerSmaller {
-    width: fit-content;
     background-color: #fff;
     padding-left: 50px;
     padding-right: 50px;
     margin-top: 20px;
     padding-top: 20px;
     padding-bottom: 40px;
+    width: 100%;
+    max-width: 1000px;
 }
 
 .profileImageContainer {
-height: 460px;
-
+    height: 460px;
 }
 
 .profileCoverImgContainer {
@@ -186,8 +187,9 @@ height: 460px;
     top: 340px;
 }
 .profileCoverImg {
-    width: 800px;
+    width: 100%;
     height:400px;
+    object-fit: cover;
 }
 .profilePicImg {
     width: 120px;
@@ -205,6 +207,9 @@ height: 460px;
     margin-left: 20px;
     display: flex;
     flex-direction: column;
+    width: 0;
+    flex: auto;
+    word-break: break-word;
 }
 
 .profileContainerRight {
